db/grammars/output/JSONGrammarParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.4
 *
 *     -  From the grammar source file : /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g
 *     -                            On : 2011-11-17 23:24:37
 *     -                for the parser : JSONGrammarParserParser
 *
 * Editing it, at least manually, is not wise.
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD license"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "JSONGrammarParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */

#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pJSONGrammarParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pJSONGrammarParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pJSONGrammarParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pJSONGrammarParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */

#undef	    PARSER
#undef	    RECOGNIZER
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO
#undef		DBG

#define	    PARSER				ctx->pParser
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger


#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */


/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   JSONGrammarParserTokenNames[17+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>",
        (pANTLR3_UINT8) "<UP>",
        (pANTLR3_UINT8) "COLON",
        (pANTLR3_UINT8) "COMMA",
        (pANTLR3_UINT8) "COMMENT",
        (pANTLR3_UINT8) "ESC_SEQ",
        (pANTLR3_UINT8) "EXPONENT",
        (pANTLR3_UINT8) "FLOAT",
        (pANTLR3_UINT8) "HEX_DIGIT",
        (pANTLR3_UINT8) "ID",
        (pANTLR3_UINT8) "INT",
        (pANTLR3_UINT8) "LBRAK",
        (pANTLR3_UINT8) "LBRAN",
        (pANTLR3_UINT8) "OCTAL_ESC",
        (pANTLR3_UINT8) "RBRAK",
        (pANTLR3_UINT8) "RBRAN",
        (pANTLR3_UINT8) "STRING",
        (pANTLR3_UINT8) "UNICODE_ESC",
        (pANTLR3_UINT8) "WS"
       };



// Forward declare the locally static matching functions we have generated.
//
static 
 void
	start_point    (pJSONGrammarParser ctx);
static 
 void
	object_expr    (pJSONGrammarParser ctx);
static 
 void
	array_expr    (pJSONGrammarParser ctx);
static 
 void
	pair    (pJSONGrammarParser ctx);
static 
 void
	name    (pJSONGrammarParser ctx);
static 
 void
	value    (pJSONGrammarParser ctx);
static void	JSONGrammarParserFree(pJSONGrammarParser ctx);
static void     JSONGrammarParserReset (pJSONGrammarParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed.
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "/home/cross/workspace/jaguar/db/grammars/JSONGrammar.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new JSONGrammarParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pJSONGrammarParser
JSONGrammarParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return JSONGrammarParserNewSSD(instream, NULL);
}

/** \brief Create a new JSONGrammarParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pJSONGrammarParser
JSONGrammarParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pJSONGrammarParser ctx;	    /* Context structure we will build and return   */

    ctx	= (pJSONGrammarParser) ANTLR3_CALLOC(1, sizeof(JSONGrammarParser));

    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }

    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function.
     *
     * We don't use the macros defined in JSONGrammarParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our JSONGrammarParser interface
     */
    ctx->start_point	= start_point;
    ctx->object_expr	= object_expr;
    ctx->array_expr	= array_expr;
    ctx->pair	= pair;
    ctx->name	= name;
    ctx->value	= value;
    ctx->free			= JSONGrammarParserFree;
    ctx->reset			= JSONGrammarParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;

    /* Install the scope pushing methods.
     */

    /* Install the token table
     */
    PSRSTATE->tokenNames   = JSONGrammarParserTokenNames;


    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
JSONGrammarParserReset (pJSONGrammarParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 JSONGrammarParserFree(pJSONGrammarParser ctx)
 {
    /* Free any scope memory
     */

	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);


    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }

/** Return token names used by this 
parser

 *
 * The returned pointer is used as an index into the token names table (using the token
 * number as the index).
 *
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames()
{
        return JSONGrammarParserTokenNames;
}


/* Declare the bitsets
 */
/** Bitset defining follow set for error recovery in rule state: FOLLOW_object_expr_in_start_point25  */
static	ANTLR3_BITWORD FOLLOW_object_expr_in_start_point25_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_object_expr_in_start_point25	= { FOLLOW_object_expr_in_start_point25_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_array_expr_in_start_point29  */
static	ANTLR3_BITWORD FOLLOW_array_expr_in_start_point29_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000000) };
static  ANTLR3_BITSET_LIST FOLLOW_array_expr_in_start_point29	= { FOLLOW_array_expr_in_start_point29_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_EOF_in_start_point31  */
static	ANTLR3_BITWORD FOLLOW_EOF_in_start_point31_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_EOF_in_start_point31	= { FOLLOW_EOF_in_start_point31_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_LBRAN_in_object_expr43  */
static	ANTLR3_BITWORD FOLLOW_LBRAN_in_object_expr43_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000800) };
static  ANTLR3_BITSET_LIST FOLLOW_LBRAN_in_object_expr43	= { FOLLOW_LBRAN_in_object_expr43_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_pair_in_object_expr45  */
static	ANTLR3_BITWORD FOLLOW_pair_in_object_expr45_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000020020) };
static  ANTLR3_BITSET_LIST FOLLOW_pair_in_object_expr45	= { FOLLOW_pair_in_object_expr45_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_COMMA_in_object_expr48  */
static	ANTLR3_BITWORD FOLLOW_COMMA_in_object_expr48_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000800) };
static  ANTLR3_BITSET_LIST FOLLOW_COMMA_in_object_expr48	= { FOLLOW_COMMA_in_object_expr48_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_pair_in_object_expr50  */
static	ANTLR3_BITWORD FOLLOW_pair_in_object_expr50_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000020020) };
static  ANTLR3_BITSET_LIST FOLLOW_pair_in_object_expr50	= { FOLLOW_pair_in_object_expr50_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_RBRAN_in_object_expr54  */
static	ANTLR3_BITWORD FOLLOW_RBRAN_in_object_expr54_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_RBRAN_in_object_expr54	= { FOLLOW_RBRAN_in_object_expr54_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_LBRAK_in_array_expr63  */
static	ANTLR3_BITWORD FOLLOW_LBRAK_in_array_expr63_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000047200) };
static  ANTLR3_BITSET_LIST FOLLOW_LBRAK_in_array_expr63	= { FOLLOW_LBRAK_in_array_expr63_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_value_in_array_expr65  */
static	ANTLR3_BITWORD FOLLOW_value_in_array_expr65_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000010020) };
static  ANTLR3_BITSET_LIST FOLLOW_value_in_array_expr65	= { FOLLOW_value_in_array_expr65_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_COMMA_in_array_expr68  */
static	ANTLR3_BITWORD FOLLOW_COMMA_in_array_expr68_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000047200) };
static  ANTLR3_BITSET_LIST FOLLOW_COMMA_in_array_expr68	= { FOLLOW_COMMA_in_array_expr68_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_value_in_array_expr70  */
static	ANTLR3_BITWORD FOLLOW_value_in_array_expr70_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000010020) };
static  ANTLR3_BITSET_LIST FOLLOW_value_in_array_expr70	= { FOLLOW_value_in_array_expr70_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_RBRAK_in_array_expr74  */
static	ANTLR3_BITWORD FOLLOW_RBRAK_in_array_expr74_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_RBRAK_in_array_expr74	= { FOLLOW_RBRAK_in_array_expr74_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_name_in_pair86  */
static	ANTLR3_BITWORD FOLLOW_name_in_pair86_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000010) };
static  ANTLR3_BITSET_LIST FOLLOW_name_in_pair86	= { FOLLOW_name_in_pair86_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_COLON_in_pair88  */
static	ANTLR3_BITWORD FOLLOW_COLON_in_pair88_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000047200) };
static  ANTLR3_BITSET_LIST FOLLOW_COLON_in_pair88	= { FOLLOW_COLON_in_pair88_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_value_in_pair90  */
static	ANTLR3_BITWORD FOLLOW_value_in_pair90_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_value_in_pair90	= { FOLLOW_value_in_pair90_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_ID_in_name102  */
static	ANTLR3_BITWORD FOLLOW_ID_in_name102_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_ID_in_name102	= { FOLLOW_ID_in_name102_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_INT_in_value114  */
static	ANTLR3_BITWORD FOLLOW_INT_in_value114_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_INT_in_value114	= { FOLLOW_INT_in_value114_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_FLOAT_in_value118  */
static	ANTLR3_BITWORD FOLLOW_FLOAT_in_value118_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_FLOAT_in_value118	= { FOLLOW_FLOAT_in_value118_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_STRING_in_value122  */
static	ANTLR3_BITWORD FOLLOW_STRING_in_value122_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_STRING_in_value122	= { FOLLOW_STRING_in_value122_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_object_expr_in_value126  */
static	ANTLR3_BITWORD FOLLOW_object_expr_in_value126_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_object_expr_in_value126	= { FOLLOW_object_expr_in_value126_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_array_expr_in_value130  */
static	ANTLR3_BITWORD FOLLOW_array_expr_in_value130_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_array_expr_in_value130	= { FOLLOW_array_expr_in_value130_bits, 1	};


/* ==============================================
 * Parsing rules
 */
/**
 * $ANTLR start start_point
 * /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:8:1: start_point : ( object_expr | array_expr EOF );
 */
static void
start_point(pJSONGrammarParser ctx)
{
    /* Initialize rule variables
     */

    {
        {
            //  /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:9:2: ( object_expr | array_expr EOF )

            ANTLR3_UINT32 alt1;

            alt1=2;

            switch ( LA(1) )
            {
            case LBRAN:
            	{
            		alt1=1;
            	}
                break;
            case LBRAK:
            	{
            		alt1=2;
            	}
                break;

            default:
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                EXCEPTION->message      = (void *)"";
                EXCEPTION->decisionNum  = 1;
                EXCEPTION->state        = 0;


                goto rulestart_pointEx;

            }

            switch (alt1)
            {
        	case 1:
        	    // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:9:4: object_expr
        	    {
        	        FOLLOWPUSH(FOLLOW_object_expr_in_start_point25);
        	        object_expr(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestart_pointEx;
        	        }


        	    }
        	    break;
        	case 2:
        	    // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:9:18: array_expr EOF
        	    {
        	        FOLLOWPUSH(FOLLOW_array_expr_in_start_point29);
        	        array_expr(ctx);

        	        FOLLOWPOP();
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestart_pointEx;
        	        }


        	         MATCHT(EOF, &FOLLOW_EOF_in_start_point31);
        	        if  (HASEXCEPTION())
        	        {
        	            goto rulestart_pointEx;
        	        }


        	    }
        	    break;

            }
        }
    }

    // This is where rules clean up and exit
    //
    goto rulestart_pointEx; /* Prevent compiler warnings */
    rulestart_pointEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end start_point */

/**
 * $ANTLR start object_expr
 * /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:11:1: object_expr : LBRAN pair ( COMMA pair )* RBRAN ;
 */
static void
object_expr(pJSONGrammarParser ctx)
{
    /* Initialize rule variables
     */

    {
        // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:12:2: ( LBRAN pair ( COMMA pair )* RBRAN )
        // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:12:5: LBRAN pair ( COMMA pair )* RBRAN
        {
             MATCHT(LBRAN, &FOLLOW_LBRAN_in_object_expr43);
            if  (HASEXCEPTION())
            {
                goto ruleobject_exprEx;
            }


            FOLLOWPUSH(FOLLOW_pair_in_object_expr45);
            pair(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleobject_exprEx;
            }


            // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:12:16: ( COMMA pair )*

            for (;;)
            {
                int alt2=2;
                switch ( LA(1) )
                {
                case COMMA:
                	{
                		alt2=1;
                	}
                    break;

                }

                switch (alt2)
                {
            	case 1:
            	    // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:12:17: COMMA pair
            	    {
            	         MATCHT(COMMA, &FOLLOW_COMMA_in_object_expr48);
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleobject_exprEx;
            	        }


            	        FOLLOWPUSH(FOLLOW_pair_in_object_expr50);
            	        pair(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleobject_exprEx;
            	        }


            	    }
            	    break;

            	default:
            	    goto loop2;	/* break out of the loop */
            	    break;
                }
            }
            loop2: ; /* Jump out to here if this rule does not match */


             MATCHT(RBRAN, &FOLLOW_RBRAN_in_object_expr54);
            if  (HASEXCEPTION())
            {
                goto ruleobject_exprEx;
            }


        }

    }

    // This is where rules clean up and exit
    //
    goto ruleobject_exprEx; /* Prevent compiler warnings */
    ruleobject_exprEx: ;

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
            }
    return ;
}
/* $ANTLR end object_expr */

/**
 * $ANTLR start array_expr
 * /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:14:1: array_expr : LBRAK value ( COMMA value )* RBRAK ;
 */
static void
array_expr(pJSONGrammarParser ctx)
{
    /* Initialize rule variables
     */

    {
        // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:15:2: ( LBRAK value ( COMMA value )* RBRAK )
        // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:15:4: LBRAK value ( COMMA value )* RBRAK
        {
             MATCHT(LBRAK, &FOLLOW_LBRAK_in_array_expr63);
            if  (HASEXCEPTION())
            {
                goto rulearray_exprEx;
            }


            FOLLOWPUSH(FOLLOW_value_in_array_expr65);
            value(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto rulearray_exprEx;
            }


            // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:15:16: ( COMMA value )*

            for (;;)
            {
                int alt3=2;
                switch ( LA(1) )
                {
                case COMMA:
                	{
                		alt3=1;
                	}
                    break;

                }

                switch (alt3)
                {
            	case 1:
            	    // /home/cross/workspace/jaguar/db/grammars/JSONGrammar.g:15:17: COMMA value
            	    {
            	         MATCHT(COMMA, &FOLLOW_COMMA_in_array_expr68);
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulearray_exprEx;
            	        }


            	        FOLLOWPUSH(FOLLOW_value_in_array_expr70);
            	        value(ctx);
